--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "profile_ichemiton/submodules/multiPlot"]
-	path = profile_ichemiton/submodules/multiPlot
+	path = dot.ipython/profile_ichemiton/submodules/multiPlot
 	url = git@github.com:grhawk/multiPlot.git
